--- a/main.css
+++ b/main.css
@@ -1,5 +1,111 @@
-html {
-  font-size: 50px;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+h1, h2, h3, h5 {
+  font-weight: 700;
+}
+
+body {
+  background-color: white;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  background-color: #011827;
+  padding: 10px;
+}
+header .logo__container {
+  align-items: center;
+}
+header .logo {
+  transform: translateY(0.1rem);
+  width: 6rem;
+  height: 4rem;
+}
+header h1 {
+  display: inline-block;
+  color: white;
+  font-size: 20px;
+  line-height: 1.25rem;
+  padding-top: 10px;
+}
+header .menu__container {
+  width: 100%;
+  height: auto;
+  padding: 1rem 5% 0.8rem 5%;
+}
+@media screen and (max-width: 499px) {
+  header .menu__container {
+    display: none;
+  }
+}
+header .menu__container .menu ul {
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+header .menu__container .menu ul a {
+  color: white;
+}
+@media screen and (min-width: 500px) and (max-width: 899px) {
+  header .logo__container {
+    width: 100%;
+  }
+  header .logo {
+    transform: translateY(0.2rem);
+    margin: 5px 10px 0 5px;
+    width: 7rem;
+    height: 5rem;
+    margin-right: 10px;
+  }
+  header .logo__container h1 {
+    height: auto;
+    font-size: 24px;
+    line-height: 1.5rem;
+    padding-top: 15px;
+    padding-bottom: 5px;
+  }
+  header .menu__container {
+    display: none;
+  }
+  header .menu__container {
+    display: none;
+  }
+}
+@media screen and (min-width: 900px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  header .logo__container {
+    display: flex;
+    align-items: center;
+  }
+  header .logo__container h1 {
+    display: flex;
+    font-size: 2.2rem;
+    padding-top: 40px;
+  }
+  header .logo__container h1 span {
+    margin-right: 10px;
+  }
+  header .logo__container .logo {
+    width: 8rem;
+    height: 5.5rem;
+    margin-right: 10px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
