--- a/main.css
+++ b/main.css
@@ -37,6 +37,9 @@ header h1 {
   line-height: 1.25rem;
   padding-top: 10px;
 }
+header span {
+  display: block;
+}
 header .menu__container {
   width: 100%;
   height: auto;
@@ -105,6 +108,84 @@ header .menu__container .menu ul a {
     width: 8rem;
     height: 5.5rem;
     margin-right: 10px;
+  }
+}
+
+.background__pic {
+  width: 100%;
+  height: 15rem;
+  background-image: url(background2.png);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+.background__pic .buttons {
+  position: absolute;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: unset;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  top: 100%;
+  right: 50%;
+  bottom: -130%;
+  padding: 0 5%;
+  transform: translate(50%, -50%);
+}
+.background__pic .buttons .btn {
+  font-weight: 700;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  padding: 1rem 3rem;
+}
+.background__pic .buttons .btn__one {
+  background-color: transparent;
+  color: #36769d;
+  text-decoration: underline;
+  font-size: 15px;
+  margin: 1rem;
+}
+.background__pic .buttons .btn__two {
+  background-color: #8acfe5;
+  color: #011827;
+  font-size: 18px;
+}
+@media screen and (min-width: 500px) and (max-width: 899px) {
+  .background__pic {
+    height: 25rem;
+  }
+  .background__pic .buttons {
+    bottom: -80%;
+  }
+  .background__pic .buttons .btn {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 900px) {
+  .background__pic {
+    height: 30rem;
+  }
+  .background__pic .buttons {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    top: 100%;
+    right: 50%;
+    transform: translate(50%, -50%);
+  }
+  .background__pic .buttons .btn {
+    font-size: 23px;
+  }
+  .background__pic .buttons .btn__one {
+    margin-right: 1rem;
+    background-color: #E3170A;
+    color: white;
+    text-decoration: none;
   }
 }
 
