--- a/src/main.scss
+++ b/src/main.scss
@@ -1,440 +1,528 @@
-
 * {
-    margin: 0;
-    padding: 0;
-    font-family: "Roboto", sans-serif;
-    box-sizing: border-box;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
-h1, h2, h3, h5 {
-    font-weight: 700;
+h1,
+h2,
+h3,
+h5 {
+  font-weight: 700;
 }
 
 body {
-    background-color: white;
+  background-color: white;
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    background-color: #011827;
-    padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  background-color: #011827;
+  padding: 10px;
 
+  .logo__container {
+    align-items: center;
+  }
+
+  .logo {
+    transform: translateY(0.1rem);
+    width: 6rem;
+    height: 4rem;
+  }
+
+  h1 {
+    display: inline-block;
+    color: white;
+    font-size: 20px;
+    line-height: 1.25rem;
+    padding-top: 10px;
+  }
+
+  span {
+    display: block;
+  }
+
+  .menu__container {
+    width: 100%;
+    height: auto;
+    padding: 1rem 5% 0.8rem 5%;
+
+    @media screen and (max-width: 499px) {
+      display: none;
+    }
+
+    .menu ul {
+      display: flex;
+      justify-content: space-evenly;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+
+      a {
+        color: white;
+      }
+    }
+  }
+
+  @media screen and (min-width: 500px) and (max-width: 899px) {
     .logo__container {
-        align-items: center;
+      width: 100%;
     }
 
     .logo {
-        transform: translateY(0.1rem);
-        width: 6rem;
-        height: 4rem;
+      transform: translateY(0.2rem);
+      margin: 5px 10px 0 5px;
+      width: 7rem;
+      height: 5rem;
+      margin-right: 10px;
     }
 
-    h1 {
-        display: inline-block;
-        color: white;
-        font-size: 20px;
-        line-height: 1.25rem;
-        padding-top: 10px;
-    }
-
-    span {
-        display: block;
+    .logo__container h1 {
+      height: auto;
+      font-size: 24px;
+      line-height: 1.5rem;
+      padding-top: 15px;
+      padding-bottom: 5px;
     }
 
     .menu__container {
-        width: 100%;
-        height: auto;
-        padding: 1rem 5% 0.8rem 5%;
+      display: none;
+    }
 
-        @media screen and (max-width: 499px){
-            display: none;
-        }
-    
-      .menu ul {
+    .menu__container {
+      display: none;
+    }
+  }
+
+  @media screen and (min-width: 900px) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    .logo__container {
+      display: flex;
+      align-items: center;
+
+      h1 {
         display: flex;
-        justify-content: space-evenly;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        width: 100%;
-        
-        a {
-            color: white;
+        font-size: 2.2rem;
+        padding-top: 40px;
+
+        span {
+          margin-right: 10px;
+        }
+      }
+
+      .logo {
+        width: 8rem;
+        height: 5.5rem;
+        margin-right: 10px;
+      }
+    }
+  }
+}
+
+.background__pic {
+  width: 100%;
+  height: 15rem;
+  background-image: url(background2.png);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+
+  .buttons {
+    position: absolute;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: unset;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    top: 100%;
+    right: 50%;
+    bottom: -130%;
+    padding: 0 5%;
+    transform: translate(50%, -50%);
+
+    .btn {
+      font-weight: 700;
+      border-radius: 5px;
+      border: none;
+      cursor: pointer;
+      padding: 1rem 3rem;
+    }
+
+    .btn__one {
+      background-color: transparent;
+      color: #36769d;
+      text-decoration: underline;
+      font-size: 15px;
+      margin: 1rem;
+    }
+
+    .btn__two {
+      background-color: #8acfe5;
+      color: #011827;
+      font-size: 18px;
+    }
+  }
+
+  @media screen and (min-width: 500px) and (max-width: 899px) {
+    height: 25rem;
+
+    .buttons {
+      bottom: -80%;
+
+      .btn {
+        font-size: 16px;
+      }
+    }
+  }
+
+  @media screen and (min-width: 900px) {
+    height: 30rem;
+
+    .buttons {
+      position: absolute;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      width: 100%;
+      height: auto;
+      top: 100%;
+      right: 50%;
+      transform: translate(50%, -50%);
+
+      .btn {
+        font-size: 23px;
+      }
+
+      .btn__one {
+        margin-right: 1rem;
+        background-color: #e3170a;
+        color: white;
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+.reviews {
+  width: 100%;
+  height: auto;
+  margin: 15rem 0 8rem 0;
+  padding: 0 5%;
+
+  .user__content {
+    display: flex;
+    width: 100%;
+    padding: 0 1rem;
+    overflow-x: scroll;
+    overflow-y: hidden;
+
+    .review {
+      display: flex;
+      height: auto;
+      margin-left: 1rem;
+      @media screen and (max-width: 899px) {
+        min-width: 100%;
+      }
+
+      .user__place {
+        width: auto;
+        height: 100%;
+        margin-right: 1rem;
+
+        .user__pic {
+          width: 5rem;
+          height: 5rem;
+          float: left;
         }
       }
     }
 
-    @media screen and (min-width: 500px) and (max-width: 899px) {
-        .logo__container {
-            width: 100%;
+    .review__one {
+      margin-left: 0;
+    }
+
+    .review__text {
+      font-weight: 400;
+      font-style: italic;
+      font-size: 1.5rem;
+      margin-bottom: 0.7;
+    }
+  }
+
+  @media screen and (min-width: 900px) {
+    margin: 150px 0;
+
+    .user__content {
+      justify-content: space-between;
+      max-width: 1200px;
+      margin: 0 auto;
+      overflow-x: hidden;
+
+      .review {
+        width: 45%;
+      }
+
+      .new__row {
+        display: none;
+      }
+    }
+  }
+}
+
+.popular__challenges {
+  width: 100%;
+  height: auto;
+  margin: 5rem 0;
+
+  .main__title {
+    text-align: center;
+    font-weight: 400;
+    margin: 4.5rem;
+    font-size: 25px;
+  }
+
+  .boxes {
+    display: flex;
+    justify-content: unset;
+    width: 100%;
+    padding-left: 15%;
+    padding-bottom: 5px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+
+    .box {
+      height: auto;
+      border-radius: 6px;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+      background-color: white;
+      @media screen and (max-width: 900px) {
+        max-width: 1300px;
+        min-width: 65%;
+        margin-right: 4rem;
+      }
+      .box__pic {
+        height: 12rem;
+        width: 100%;
+      }
+
+      .box__content {
+        padding: 1rem;
+
+        .title {
+          font-weight: 400;
+          font-size: 28px;
         }
 
-        .logo {
-            transform: translateY(0.2rem);
-            margin: 5px 10px 0 5px;
-            width: 7rem;
-            height: 5rem;
-            margin-right: 10px;
+        .five__stars {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin: 0.1rem 0 1rem 0;
+
+          .stars {
+            display: flex;
+
+            .star {
+              background-image: url(Star__1.png);
+              background-size: cover;
+              background-repeat: no-repeat;
+              background-position: center;
+              width: 1rem;
+              height: 1rem;
+              margin-right: 0.1rem;
+            }
+
+            .empty__star {
+              background-image: url(Star51.png);
+            }
+          }
+
+          p {
+            font-size: 15px;
+          }
         }
 
-        .logo__container h1 {
+        .box__text {
+          font-size: 18px;
+        }
+
+        .box__button {
+          display: flex;
+          justify-content: flex-end;
+          margin-top: 1rem;
+
+          .book__button {
+            background-color: #e3170a;
+            color: white;
+            font-weight: 700;
+            font-size: 15px;
+            border: none;
+            border-radius: 5px;
+            padding: 0.8rem 2rem;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+  }
+  .mid__buttons {
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: unset;
+    align-items: center;
+    margin: 5rem 0;
+
+    .btn__One {
+      background-color: transparent;
+      color: #36769d;
+      text-decoration: underline;
+      font-weight: 700;
+      font-size: 1.2rem;
+      margin-top: 2rem;
+      padding: 1rem 3rem;
+      border: none;
+      cursor: pointer;
+    }
+
+    .btn__Two {
+      background-color: #8acfe5;
+      color: #011827;
+      font-size: 1.2rem;
+      font-weight: 700;
+      border-radius: 5px;
+      padding: 1rem 3rem;
+      border: none;
+      cursor: pointer;
+    }
+  }
+  @media screen and (min-width: 500px) {
+    .main__title {
+      font-size: 27px;
+    }
+
+    .boxes .box .box__pic {
+      height: 15rem;
+    }
+  }
+
+  @media screen and (min-width: 900px) {
+    padding: 0 5%;
+
+    .box__challenges {
+      max-width: 1300px;
+      margin: 0 auto;
+      .main__title {
+        font-size: 2rem;
+      }
+
+      .boxes {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 0;
+        overflow-x: hidden;
+        .box {
+          width: 28%;
+          height: auto;
+        }
+      }
+      .mid__buttons {
+        justify-content: center;
+        flex-direction: row;
+        
+        .btn__One {
+            margin-right: 1rem;
+            margin-top: 0;
+            background-color: #E3170A;
+            color: white;
+            font-weight: 700;
+            font-size: 23px;
+            border-radius: 5px;
+            padding: 1rem 3rem;
+            border: none;
+            cursor: pointer;
+        }
+        
+        .btn__Two {
+            background-color: #8ACFE5;
+            color: #011827;
+            font-size: 23px;
+            font-weight: 700;
+            border-radius: 5px;
+            padding: 1rem 3rem;
+            border: none;
+            cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+.info {
+    background-color: #011827;
+    width: 100%;
+    height: auto;
+    padding: 0 5%;
+
+    .mid__info {
+        max-width: 1300px;
+        margin: 0 auto;
+        height: 30rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        p {
             height: auto;
-            font-size: 24px;
-            line-height: 1.5rem;
-            padding-top: 15px;
-            padding-bottom: 5px;    
+            text-align: center;
+            color: white;
+            
+            @media screen and (max-width: 899px){
+                font-size: 1.2rem;
+            }
         }
 
-        .menu__container {
-            display: none;
-        }
+        button {
+            margin-top: 2.5rem;
+            font-weight: 700;
+            border-radius: 5px;
+            background-color: #011827;
+            color: #8ACFE5;
+            border: 0.2rem solid #8ACFE5;
+            padding: 1rem 3rem;
+            cursor: pointer;
 
-        .menu__container {
-            display: none;
+            @media screen and (max-width: 899px) {
+                font-size: 20px;
+            }
         }
     }
 
     @media screen and (min-width: 900px){
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-
-        .logo__container {
-            display: flex;
-            align-items: center;
-
-           h1 {
-             display: flex;
-             font-size: 2.2rem;
-             padding-top: 40px;
-
-            span {
-                margin-right: 10px;
-            }
-           }
-
-            .logo {
-                width: 8rem;
-                height: 5.5rem;
-                margin-right: 10px;
-           }
-        }
-    }
-}
-
-.background__pic {
-    width: 100%;
-    height: 15rem;
-    background-image: url(background2.png);
-    background-size: cover;
-    background-position: center;
-    position: relative;
- 
-    .buttons {
-        position: absolute;
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: unset;
-        align-items: center;
-        width: 100%;
-        height: auto;
-        top: 100%;
-        right: 50%;
-        bottom: -130%;
-        padding: 0 5%;
-        transform: translate(50%, -50%);
-
-        .btn {
-            font-weight: 700;
-            border-radius: 5px;
-            border: none;
-            cursor: pointer;
-            padding: 1rem 3rem;
-        }
-
-        .btn__one {
-            background-color: transparent;
-            color: #36769d;
-            text-decoration: underline;
-            font-size: 15px;
-            margin: 1rem;
-        }
-
-        .btn__two {
-            background-color: #8acfe5;
-            color: #011827;
-            font-size: 18px;
-        }
-    }
-
-    @media screen and (min-width: 500px) and (max-width: 899px) {
-        height: 25rem;
-
-        .buttons {
-            bottom: -80%;
-
-            .btn {
-                font-size: 16px;
-            }
-        }
-    }
-
-    @media screen and (min-width: 900px) {
-        height: 30rem;
-
-        .buttons {
-            position: absolute;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            width: 100%;
-            height: auto;
-            top: 100%;
-            right: 50%;
-            transform: translate(50%, -50%);
-
-            .btn {
-                font-size: 23px;
-            }
-
-            .btn__one {
-                margin-right: 1rem;
-                background-color: #E3170A;
-                color: white;
-                text-decoration: none;
-            }
-        }
-    }
-}
-
-.reviews {
-    width: 100%;
-    height: auto;
-    margin: 15rem 0 8rem 0;
-    padding: 0 5%;
-
-    .user__content {
-        display: flex;
-        width: 100%;
-        padding: 0 1rem;
-        overflow-x: scroll;
-        overflow-y: hidden;
-
-        .review {
-            display: flex;
-            height: auto;
-            margin-left: 1rem;
-            @media screen and (max-width: 899px) {
-                min-width: 100%;
-            }
-
-            .user__place {
-                width: auto;
-                height: 100%;
-                margin-right: 1rem;
-
-                .user__pic {
-                    width: 5rem;
-                    height: 5rem;
-                    float: left;
-                }
-            }
-        }
-
-        .review__one {
-            margin-left: 0;  
-        }
-
-        .review__text {
-            font-weight: 400;
-            font-style: italic;
-            font-size: 1.5rem;
-            margin-bottom: 0.7;
-        }
-    }
-
-    @media screen and (min-width: 900px) {
-        margin: 150px 0;
-
-        .user__content {
-            justify-content: space-between;
-            max-width: 1200px;
-            margin: 0 auto;
-            
-            .review {
-                width: 45%;
-            }
-
-            .new__row {
-                display: none;
-            }      
-        }
-    }     
-}
-
-.popular__challenges {
-    width: 100%;
-    height: auto;
-    margin: 5rem 0;
-
-    .main__title {
-        text-align: center;
-        font-weight: 400;
-        margin: 4.5rem;
-        font-size: 25px;
-    }
-
-    .boxes {
-        display: flex;
-        justify-content: unset;   
-        width: 100%;
-        padding-left: 15%;
-        padding-bottom: 5px;
-        overflow-x: scroll;
-        overflow-y: hidden;
         
-
-
-        .box {
-            max-width: 1400px;
-            min-width: 65%;
-            width: 28%;
-            margin-right: 4rem;
-            height: auto;
-            border-radius: 6px;
-            box-shadow: rgba(50, 50, 93,0.25)0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;;
-            background-color: white;
-
-            .box__pic {
-                height: 12rem;
-                width: 100%;
-            }
-
-            .box__content {
-                padding: 1rem;
-
-                .title {
-                    font-weight: 400;
-                    font-size: 28px;
-                }
-
-                .five__stars {
-                   width: 100%;
-                   display: flex;
-                   justify-content: space-between;
-                   align-items: center;
-                   margin: 0.1rem 0 1rem 0;
-
-                   .stars {
-                    display: flex;
-
-                    .star {
-                        background-image: url(Star__1.png);
-                        background-size: cover;
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        width: 1rem;
-                        height: 1rem;
-                        margin-right: 0.1rem;
-                    }
-
-                    .empty__star {
-                        background-image: url(Star51.png);
-                    }         
-                   }
-
-                   p {
-                    font-size: 15px;
-                   }
-                }
-                
-                .box__text {
-                    font-size: 18px;
-                }
-
-                .box__button {
-                    display: flex;
-                    justify-content: flex-end;
-                    margin-top: 1rem;
-
-                    .book__button {
-                        background-color: #E3170A;
-                        color: white;
-                        font-weight: 700;
-                        font-size: 15px;
-                        border: none;
-                        border-radius: 5px;
-                        padding: 0.8rem 2rem;
-                        cursor: pointer;
-                    }
-                }
-            }
+        p {
+            max-width: 45%;
+            font-size: 1.5rem;
         }
+        
+        button {
+            font-size: 24px;
+        }
+
+
+
     }
-    .mid__buttons {
-        width: 100%;
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: unset;
-        align-items: center;
-        margin: 5rem 0;
-       
-
-        .btn__One {
-            background-color: transparent;
-            color: #36769d;
-            text-decoration: underline;
-            font-weight: 700;
-            font-size: 1.2rem;
-            margin-top: 2rem;
-            border: none;
-            cursor: pointer;
-        }
-
-        .btn__Two {
-            background-color: #8ACFE5;
-            color: #011827;
-            font-size: 1.2rem;
-            font-weight: 700;
-            border-radius: 5px;
-            padding: 1rem 3rem;
-            border: none;
-            cursor: pointer;
-        }
-    }
-    @media screen and (min-width: 500px) {
-        .main__title {
-            font-size: 27px;
-        }
-
-        .boxes .box .box__pic {
-            height: 15rem;
-        }
-    }
-
-    @media screen and (min-width: 900px) {
-        padding: 0 5%;
-
-        .box__challenges {
-            max-width: 1300px;
-
-            .main__title {
-                font-size: 2rem;
-            }
-
-            .boxes {
-                display: flex;
-                justify-content: space-between;
-
-            }
-        }
-    }
-}       
-
-
-
-
+}
