--- a/src/main.scss
+++ b/src/main.scss
@@ -521,8 +521,158 @@ header {
         button {
             font-size: 24px;
         }
-
-
-
     }
+}
+
+.block__content {
+  max-width: 1300px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+
+  .block__one, .block__four {
+    order: 1;
+    background-image: url(block11.png);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 25rem;
+  }
+
+  .block__two, .block__three {
+    width: 100%;
+    height: 25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5%;
+
+    h2 {
+      font-size: 2rem;
+    }
+
+    p {
+      font-size: 1.5rem;
+    }
+
+    button {
+      font-weight: 700;
+      font-size: 1.5rem;
+      border: none;
+      background-color: #E3170A;
+      color: white;
+      border-radius: 5px;
+      padding: 0.8rem 1.5rem;
+      cursor: pointer;
+    }
+  }
+  
+  .block__two {
+    order: 2;
+  }
+  
+  .block__three {
+    order: 4;
+  }
+
+  .block__four{
+    order:3;
+    background-image: url(kelly44.png);
+  }
+
+  @media screen and (min-width: 500px) {
+    padding: 0 5%;
+  }
+
+  @media screen and (min-width: 900px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0;
+
+    .block__one, .block__two, .block__three, .block__four {
+      width: 50%;
+      height: 30rem;
+    }
+
+    .block__three {
+      order: 3;
+    }
+  }
+}
+
+.foot {
+  width: 100%;
+  height: auto;
+  background-color: #011827;
+  padding: 0 5%;
+  margin-top: 10rem;
+
+  .foot__flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 5rem 0;
+
+    .footer__text {
+      width: inherit;
+      margin-bottom: 1.8rem;
+
+      h5 {
+        color: white;
+        font-size: 0.9rem;
+        margin-bottom: 0.5rem;
+      }
+
+      p {
+        color: white;
+        font-size: 0.9rem;
+      }
+    }
+
+    .links {
+      display: flex;
+      flex-direction: column;
+      width: inherit;
+      width: 6rem;
+
+      .site__map {
+        margin-bottom: 2rem;
+        
+        h5 {
+          color: white;
+          font-size: 0.9rem;
+          margin-bottom: 0.5rem;
+        }
+
+        a {
+          display: inline-block;
+          color: white;
+          margin-bottom: 0.2rem;
+          font-size: 0.9rem;
+        }
+
+        .play__online{
+          margin-top: 1rem;
+        }
+   
+      }
+
+      .social__media {
+        h5 {
+          color: white;
+          font-size: 0.9rem;
+          margin-bottom: 0.5rem;
+        }
+
+        a {
+          display: inline-block;
+          color: white;
+          margin-bottom: 0.2rem;
+          font-size: 0.9rem;
+        }
+      }
+    }
+  }
 }
