--- a/src/main.scss
+++ b/src/main.scss
@@ -100,9 +100,11 @@ header {
         li a {
           display: inline-block;
           font-size: 1.8rem;
+          font-weight: 700;
           padding: 2rem 1rem;
           text-decoration: none;
           color: white;
+
         }
 
         .close {
