--- a/main.css
+++ b/main.css
@@ -110,19 +110,17 @@ header span {
     cursor: pointer;
   }
 }
+@media screen and (max-width: 499px) {
+  header .menu__container {
+    display: none;
+  }
+}
 @media screen and (min-width: 900px) {
   header .menu__container {
     width: 100%;
     height: auto;
     padding: 1rem 5% 0.8rem 5%;
   }
-}
-@media screen and (min-width: 900px) and (max-width: 499px) {
-  header {
-    display: none;
-  }
-}
-@media screen and (min-width: 900px) {
   header .menu {
     display: flex;
     justify-content: space-evenly;
