--- a/main.css
+++ b/main.css
@@ -133,7 +133,7 @@ header span {
     color: white;
   }
   header .menu a:hover {
-    color: #8ACFE5;
+    color: #8acfe5;
   }
 }
 @media screen and (min-width: 500px) and (max-width: 899px) {
@@ -344,7 +344,8 @@ header span {
 .popular__challenges .boxes .box {
   height: auto;
   border-radius: 6px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   background-color: white;
 }
 @media screen and (max-width: 900px) {
@@ -384,7 +385,13 @@ header span {
   height: 1rem;
   margin-right: 0.1rem;
 }
-.popular__challenges .boxes .box .box__content .five__stars .stars .empty__star {
+.popular__challenges
+  .boxes
+  .box
+  .box__content
+  .five__stars
+  .stars
+  .empty__star {
   background-image: url(Star51.png);
 }
 .popular__challenges .boxes .box .box__content .five__stars p {
@@ -473,7 +480,7 @@ header span {
   .popular__challenges .box__challenges .mid__buttons .btn__One {
     margin-right: 1rem;
     margin-top: 0;
-    background-color: #E3170A;
+    background-color: #e3170a;
     color: white;
     font-weight: 700;
     font-size: 23px;
@@ -483,7 +490,7 @@ header span {
     cursor: pointer;
   }
   .popular__challenges .box__challenges .mid__buttons .btn__Two {
-    background-color: #8ACFE5;
+    background-color: #8acfe5;
     color: #011827;
     font-size: 23px;
     font-weight: 700;
@@ -524,8 +531,8 @@ header span {
   font-weight: 700;
   border-radius: 5px;
   background-color: #011827;
-  color: #8ACFE5;
-  border: 0.2rem solid #8ACFE5;
+  color: #8acfe5;
+  border: 0.2rem solid #8acfe5;
   padding: 1rem 3rem;
   cursor: pointer;
 }
@@ -550,7 +557,8 @@ header span {
   display: flex;
   flex-direction: column;
 }
-.block__content .block__one, .block__content .block__four {
+.block__content .block__one,
+.block__content .block__four {
   order: 1;
   background-image: url(block11.png);
   background-size: cover;
@@ -558,7 +566,8 @@ header span {
   width: 100%;
   height: 25rem;
 }
-.block__content .block__two, .block__content .block__three {
+.block__content .block__two,
+.block__content .block__three {
   width: 100%;
   height: 25rem;
   display: flex;
@@ -566,17 +575,20 @@ header span {
   align-items: center;
   padding: 0 5%;
 }
-.block__content .block__two h2, .block__content .block__three h2 {
+.block__content .block__two h2,
+.block__content .block__three h2 {
   font-size: 2rem;
 }
-.block__content .block__two p, .block__content .block__three p {
+.block__content .block__two p,
+.block__content .block__three p {
   font-size: 1.5rem;
 }
-.block__content .block__two button, .block__content .block__three button {
+.block__content .block__two button,
+.block__content .block__three button {
   font-weight: 700;
   font-size: 1.5rem;
   border: none;
-  background-color: #E3170A;
+  background-color: #e3170a;
   color: white;
   border-radius: 5px;
   padding: 0.8rem 1.5rem;
@@ -603,7 +615,10 @@ header span {
     flex-wrap: wrap;
     padding: 0;
   }
-  .block__content .block__one, .block__content .block__two, .block__content .block__three, .block__content .block__four {
+  .block__content .block__one,
+  .block__content .block__two,
+  .block__content .block__three,
+  .block__content .block__four {
     width: 50%;
     height: 30rem;
   }
@@ -674,7 +689,9 @@ header span {
   font-size: 0.9rem;
 }
 @media screen and (min-width: 500px) {
-  .foot .foot__flex .footer__text h5, .foot .foot__flex .links .site__map h5, .foot .foot__flex .links .social__media h5 {
+  .foot .foot__flex .footer__text h5,
+  .foot .foot__flex .links .site__map h5,
+  .foot .foot__flex .links .social__media h5 {
     font-size: 1.1rem;
   }
   .foot .foot__flex .links {
@@ -691,7 +708,9 @@ header span {
   .foot .foot__flex .footer__text {
     width: 40%;
   }
-  .foot .foot__flex .footer__text p, .foot .foot__flex .links .site__map a, .foot .foot__flex .links .social__media a {
+  .foot .foot__flex .footer__text p,
+  .foot .foot__flex .links .site__map a,
+  .foot .foot__flex .links .social__media a {
     font-size: 1.1rem;
   }
   .foot .foot__flex .links {
